--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --primary-red: #cf1322;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.flex-child {
+  display: none !important;
+}
+
+a {
+  text-decoration: none;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+
+
+
+
+
+a {
+  color: white;
+}
+
+
+
+.Links {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.Content {
+  height: calc(100vh - 50px);
+  flex-grow: 1;
+}
+
+.Tabs {
+  margin: 0 auto;
 }
