--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,18 +1,19 @@
 .Sidebar {
-  padding: 40px ;
+  padding:  40px;
   -webkit-box-shadow: 0px 6px 8px 0px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: 0px 6px 8px 0px rgba(34, 60, 80, 0.2);
   box-shadow: 0px 6px 8px 0px rgba(34, 60, 80, 0.2);;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   gap: 40px;
   position: absolute;
   transition: all 0.5s ease;
   transform: translateX(-300px);
   left: 0;
   bottom: 0;
-  height: calc(100vh - 50px);
+  height: calc(100% - 50px);
+  max-height: calc(100vh - 50px);
   width: 0;
   background: #fff;
   z-index: 10;
@@ -37,3 +38,10 @@
   width: 300px !important;
 }
 
+@media screen and (max-width: 500px) {
+  .links {
+    & a {
+      font-size: 16px;
+    }
+  }
+}
