--- a/src/pages/ChangesPage/ChangesPage.module.scss
+++ b/src/pages/ChangesPage/ChangesPage.module.scss
@@ -9,3 +9,16 @@
   display: flex;
   gap: 20px;
 }
+.Wrapper {
+  padding: 20px;
+}
+@media screen and (max-width: 600px) {
+  .Selects {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    & svg {
+      transform: rotate(90deg);
+    }
+  }
+}
